--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
-    "name": "application-name"
-  , "version": "0.0.1"
-  , "private": true
-  , "dependencies": {
-      "express": "2.5.8"
-    , "jade": ">= 0.0.1"
+  "name": "application-name",
+  "version": "0.0.1",
+  "private": true,
+  "dependencies": {
+    "express": "2.5.8",
+    "jade": ">= 0.0.1",
+    "ggsmsg": "~0.1.5",
+    "socket.io": "~1.3.7",
+    "gps-tracking": "~1.0.10",
+    "assert": "~1.3.0",
+    "mongodb": "~2.0.48"
+  },
+  "devDependencies": {
+    "ggsimulator": "~0.1.3"
   }
 }
