--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "express": "2.5.8",
-    "jade": ">= 0.0.1",
-    "socket.io": "~1.3.7",
-    "gps-tracking": "~1.0.10",
     "assert": "~1.3.0",
-    "mongodb": "~2.0.48"
+    "body-parser": "^1.14.1",
+    "express": "2.5.8",
+    "gps-tracking": "~1.0.10",
+    "jade": ">= 0.0.1",
+    "mongodb": "~2.0.48",
+    "morgan": "^1.6.1",
+    "socket.io": "~1.3.7"
   }
 }
